FIXED KNOWAGE-3345: Saved parameters toolbar, IE layout problem https://production.eng.it/jira/browse/KNOWAGE-3345

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_documentExecution.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_documentExecution.scss
@@ -303,5 +303,11 @@
 		document-paramenter-element {
 			max-width: 97%;
 		}
+		.lateralsidenav {
+			overflow-x: hidden;
+			md-toolbar {
+				min-width: 350px;
+			}
+		}
 	}
 }
